@@ -54,11 +54,54 @@ public class PyModule extends PyObject {
     }
 
     /**
+     * Imports the Python buildins module and returns its Java representation.
+     * It can be used to call functions such as {@code len()}, {@code type()}, {@code list()}, etc. For example:
+     * <pre>
+     *      builtins = PyModule.importBuiltins();
+     *      int size = builtins.call("len", pyList);
+     * </pre>
+     *
+     * @return Java representation of Python's builtin module.
+     * @see org.jpy.PyObject#call(String, Object...)
+     * @since 0.8
+     */
+    public static PyModule importBuiltins() {
+        try {
+            //Python 3.3+
+            return PyModule.importModule("builtins");
+        } catch (Exception e) {
+            //Python 2.7
+            return PyModule.importModule("__builtin__");
+        }
+    }
+
+
+    /**
+     * Extends Python's 'sys.path' variable by the given module path.
+     *
+     * @param modulePath The new module path. Should be an absolute pathname.
+     * @param prepend    If true, the new path will be the new first element of 'sys.path', otherwise it will be the last.
+     * @return The altered 'sys.path' object.
+     * @since 0.8
+     */
+    public static PyObject extendSysPath(String modulePath, boolean prepend) {
+        PyModule sys = importModule("sys");
+        PyObject sysPath = sys.getAttribute("path");
+        if (prepend) {
+            sysPath.call("insert", 0, modulePath);
+        } else {
+            sysPath.call("append", modulePath);
+        }
+        return sysPath;
+    }
+
+
+    /**
      * Create a Java proxy instance of this Python module which contains compatible functions to the ones provided in the
      * interface given by the {@code type} parameter.
      *
      * @param type The interface's type.
-     * @param <T> The interface name.
+     * @param <T>  The interface name.
      * @return A (proxy) instance implementing the given interface.
      */
     public <T> T createProxy(Class<T> type) {
