@@ -15,6 +15,8 @@ Version 0.8 (SNAPSHOT)
   - removed need to add JVM path to PATH (Windows) / LD_LIBRARY_PATH (Unix) environment variable
   - removed need to compile Java module using Maven
   - removed need to specify JDK_HOME environment variable, if JAVA_HOME already points to a JDK
+* Added new method jpy.org.PyModule.importBuiltins()
+* Added new method jpy.org.PyModule.extendSysPath()
 
 
 Version 0.7.5
